fixed header links gap

--- a/style/media.css
+++ b/style/media.css
@@ -1,3 +1,12 @@
+@media (max-width: 1200px) {
+  .header__logo {
+    margin-right: 40px;
+  }
+}
+
+
+
+
 @media (max-width: 600px) {
   body {
     font-size: 14px;
